--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -1,4 +1,56 @@
 /* === GLOBAL SETTINGS === */
+@keyframes fadeIn {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@keyframes slideUp {
+    from{
+        transform: translate3d(0, 250%, 0);
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+@-webkit-keyframes pulse {
+  0%   {-webkit-transform: scale(1.0);}
+  
+  40%  {-webkit-transform: scale(1.1);}
+  
+  100% {-webkit-transform: scale(1.0);}
+} 
+
+/* Standard syntax */ 
+@keyframes pulse {
+  0%   {transform: scale(1.0);}
+  
+  40%  {transform: scale(1.1);}
+  
+  100% {transform: scale(1.0);}
+}
+.fadeIn {
+    opacity: 1;
+    animation-name: fadeIn;
+    animation-duration: 600ms;
+    animation-iteration-count: 1;
+    
+}
+.slideUp {
+    animation-name: slideUp;
+    animation-duration: 600ms;
+    animation-iteration-count: 1;
+}
+.pulse {
+    animation-name: pulse;
+    animation-duration: 1500ms;
+    animation-iteration-count: infinite;
+}
+.opacity0 {
+    opacity: 0;
+}
 body {
     margin:0;
     color:#FFFFFF;
@@ -9,7 +61,7 @@ body {
     background-color: #E62739;
     
     border:none;
-    padding:10px 20px;
+    padding:10px 30px;
     padding-bottom:17px;
     border-radius:7px;
     box-shadow: 0px -7px 0px 0px #ad1422 inset;   
@@ -18,7 +70,7 @@ body {
 
     
     color:#F2F2F2;
-    font-size:3em;
+    font-size:3rem;
     
     transition: box-shadow 200ms , transform 200ms, padding 200ms;
     transition-timing-function: linear;
@@ -43,14 +95,16 @@ body {
 
     
     color:#F2F2F2;
-    font-size:3em;
+    font-size:3rem;
 
 }
 .nextButton {
     position:absolute;
-    bottom: 30px;
+    bottom: 10px;
     left: 50%;
-    transform: translateX(-50%);
+    margin-left: -1.5%;
+    
+    font-size:2rem;
 }
 .fullScreen {
     width:100vw;
@@ -67,8 +121,10 @@ body {
 }
 .flex { 
     display:flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-direction: column;
+    
 }
 
 /* --- GLOBAL SETTINGS --- */
@@ -116,10 +172,28 @@ body {
     z-index:0;
     background-image: url('../pics/stars.png');
 }
+.welcomeCard .container {
+    margin-top:10vh;
+}
 .code {
-    font-size:4rem;
+    
     font-family: monospace;
     text-shadow: 0px 0px 4px #E62739;
+}
+h2.code {
+    font-size:4rem;
+    height:4rem;
+}
+p.code {
+    font-size:3rem;
+    text-align:center;
+}
+.portrait {
+    width:25vh;
+    height:25vh;
+    border-radius: 50%;
+    border: 4px solid #FFFFFF;
+    box-shadow:0 0 10px 1px rgba(0,0,0,.2);
 }
 /* --- WELCOME CARD --- */
 
