--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -31,6 +31,16 @@
   
   100% {transform: scale(1.0);}
 }
+@-webkit-keyframes out {
+  0%   {-webkit-transform: scale(1.0); opacity: 1;}
+  50%  {opacity: 0;}
+  100% {-webkit-transform: scale(0.1);opacity: 0;}
+}
+@keyframes out {
+  0%   {transform: scale(1.0); opacity: 1;}
+  50%  {opacity: 0;}
+  100% {transform: scale(0.1);opacity: 0;}
+}
 .fadeIn {
     opacity: 1;
     animation-name: fadeIn;
@@ -126,7 +136,15 @@ body {
     flex-direction: column;
     
 }
-
+.loaderBox {
+    background-color:transparent;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.loaderCount {
+    font-size:4rem;
+}
 /* --- GLOBAL SETTINGS --- */
 /* === CRDS NAVIGATION === */
 .cardsNav {
