--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -1,4 +1,7 @@
 /* === GLOBAL SETTINGS === */
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:200,300,100&subset=latin,latin-ext);
+
 @keyframes fadeIn {
     from {
         opacity:0;
@@ -66,6 +69,8 @@ body {
     color:#FFFFFF;
     height:100vh;
     overflow:hidden;
+    
+    font-family: Roboto, sans-serif;
 }
 .button1 {
     background-color: #E62739;
@@ -125,8 +130,8 @@ body {
 .fullScreenImg { 
     height:130vh;
     width:130vw;
-    margin-top:-100px;
-    margin-left:-100px;
+    margin-top:-15vh;
+    margin-left:-15vw;
     position:absolute;
 }
 .flex { 
@@ -144,6 +149,7 @@ body {
 }
 .loaderCount {
     font-size:4rem;
+    font-weight: 100;
 }
 /* --- GLOBAL SETTINGS --- */
 /* === CRDS NAVIGATION === */
@@ -206,6 +212,9 @@ p.code {
     font-size:3rem;
     text-align:center;
 }
+p.code:last-child {
+    margin-top:0px;
+}
 .portrait {
     width:25vh;
     height:25vh;
@@ -215,18 +224,157 @@ p.code {
 }
 /* --- WELCOME CARD --- */
 
-/* === SECOND CARD === */
-.second {
+/* === ABOUT CARD === */
+.about {
     
+    background-image: url(../pics/desk.jpg);
+    background-size: cover;
+}
+.about h2 {
+    text-align: center;
+    font-size:2rem;
+    margin:30px;
+}
+.about h3 {
+    
+    position: relative;
+    
+    text-align:center;
+    font-size: 3rem;
+    font-weight:100; 
+}
+.about p {
+    position: relative;
+    margin:10px 50px;
+    
+    font-size:1.5rem;
+    font-weight:200; 
+}
+#desk, #retroDesk {
+    -webkit-filter: brightness(0.5);
 }
 
+.profession {
+    //background-color: #3F51B5;
+    
+    position: absolute;
+    width:45vw;
+    height:100vh;
+        
+}
+.about .icon {
+    position:absolute;
+    top:50%;
+    width:10vh;
+    height:10vh;
+    
+    transform: translateY(-50%);
+    
+}
+.profession .icon {
+    right:-4vh;
+    transform: translate(100%,-50%);
+}
+.private {
+    //background-image: url(../pics/retroDesk.jpg);
+    background-color: #E62739;
+    position: absolute;
+    width:55vw;
+    height:100vh;
+    right:0px;
+    padding-left:5vw;
+    box-sizing: border-box;
+    overflow: hidden;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 15% 52.5%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 15% 53%);
+    
+    -webkit-transition: all 400ms ease;
+    transition: all 400ms ease;
+}
 
-/* --- SECOND CARD --- */
+.private:hover {
+    -webkit-clip-path: polygon(15% 0, 100% 0, 100% 100%, 15% 100%, 0 52.5%);
+    clip-path: polygon(15% 0, 100% 0, 100% 100%, 15% 100%, 0 53%);
+}
+.private .icon {
+    left:1%;    
+}
+.private #retroDesk {
+    z-index:0;
+    left:-30vw;
+}
+
+.verticalLine {
+    width:0px;
+    height:110%;
+    border:4px solid white;
+    position: absolute;
+    left: 50%;
+    top:-10px;
+    margin-left:-4px;
+    
+    transform: rotate(-10deg);
+}
+
+/* --- ABOUT CARD --- */
 
 /* === THIRD CARD === */
 
-.third {
+.skills {
     background-color: #F79256;
+}
+.skills *:not(.fullScreenImg) {
+    position:relative;
+}
+.skills .fullScreenImg {
+    -webkit-filter: brightness(0.7);
+}
+.skills h2 {    
+    text-align:center;
+    font-size: 4rem;
+    font-weight:100;
+    margin-bottom: 0px;
+}
+.skills h3 {    
+    text-align:center;
+    font-size: 3rem;
+    font-weight:100; 
+}
+.skills > section {
+    width:50vw;
+    float:left;
+}
+.skills > section > ul {
+    width:86%;
+    margin-left:7%;
+    padding: 30px;
+    box-sizing: border-box;
+    border:1px solid #FFFFFF;
+}
+.skills .downloadCV {
+    background-color: transparent;
+    
+    position: absolute;
+    bottom: 20px;
+    left:50%;
+    transform: translateX(-50%);
+    border:1px solid #FFFFFF;
+    padding: 20px 40px;
+    outline:none;
+    border-radius:60px;
+    
+    transition:color, background-color 400ms ease;
+    cursor:pointer;
+    
+    font-size:2.5rem;
+    font-weight: 200;
+    font-family: Roboto, sans-serif;
+    color: #FFFFFF;
+}
+.skills .downloadCV:hover {
+    background-color: #FFFFFF;
+    
+    color: #282828;
 }
 
 /* --- THIRD CARD --- */
@@ -234,7 +382,9 @@ p.code {
 /* === 4th CARD === */
 .fourth {
     background-color: #1D4E89;
+    -webkit-perspective: 1000px;
 }
+
 /* --- 4th CARD --- */
 
 
